# databricks-labs-genai-apps-for-agents-en_us-1.0.0

./: .gitignore  0 - Course Overview.py  1 - Lab - Introduction to Deploying Agents on Databricks Apps.py  2  - Lab - Integrating App-Based Agents with MLflow.py  3 - Lab - Attaching Tools to an App-Based Agent.py  COURSE_OVERVIEW.md  README.md  REFERENCE_DOCS.md  Version Info.py
Includes/: Classroom-Setup-1.py  Classroom-Setup-2.py  Classroom-Setup-3.py
Includes/_lib/: agent_manager.py  artifacts_manager.py  catalog_utils.py  config_loader.py  config_renderer.py  experiment_manager.py  manifest_validator.py  pdf_creation.py  process_data.py  setup_orchestrator.py  tool_manager.py  trace_generator.py
Includes/config/: config_1.yaml  config_2.yaml  config_3.yaml
simple-agent/: agent.py  chat.html  pyproject.toml  server.py
simple-agent-with-mlflow/: agent.py  app.yaml  databricks.yml
simple-tool-calling-agent/: agent.py  app.yaml  databricks.yml
