[project]
name = "simple-chatbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.4.1",
    "databricks-openai>=0.9.0",
    "databricks-sdk",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv",
    "uv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
include = ["agent.py", "server.py"]
[project.scripts]
start-server = "server:main"
